lib/package/src/package/snapshots/wasmer_package__package__manifest__tests__transform_bash_manifest.snap
---
source: crates/webc/src/wasmer_package/manifest.rs
description: "\n            [package]\n            name = \"wasmer/bash\"\n            version = \"1.0.17\"\n            description = \"Bash is a modern POSIX-compliant implementation of /bin/sh.\"\n            license = \"GNU\"\n            wasmer-extra-flags = \"--enable-threads --enable-bulk-memory\"\n\n            [dependencies]\n            \"wasmer/coreutils\" = \"1.0.16\"\n\n            [[module]]\n            name = \"bash\"\n            source = \"bash.wasm\"\n            abi = \"wasi\"\n\n            [[command]]\n            name = \"bash\"\n            module = \"bash\"\n            runner = \"wasi@unstable_\"\n        "
expression: "&transformed"
---
use:
  wasmer/coreutils: wasmer/coreutils@^1.0.19
package:
  wapm:
    name: wasmer/bash
    version: 1.0.17
    description: Bash is a modern POSIX-compliant implementation of /bin/sh.
    license: GNU
atoms:
  bash:
    kind: "https://webc.org/kind/wasm"
    signature: "sha256:Wjn+71LlO4/+39cFFVbsEF7YaYLxIqBdJyjZZ3jk65Y="
commands:
  bash:
    runner: "https://webc.org/runner/wasi"
    annotations:
      atom:
        name: bash
      wasi:
        atom: bash
entrypoint: bash
