lib/package/src/package/snapshots/wasmer_package__package__manifest__tests__transform_empty_manifest.snap
---
source: crates/webc/src/wasmer_package/manifest.rs
description: "\n            [package]\n            name = \"some/package\"\n            version = \"0.0.0\"\n            description = \"My awesome package\"\n        "
expression: "&transformed"
---
package:
  wapm:
    name: some/package
    version: 0.0.0
    description: My awesome package

